--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidTruForms</string>
+    <string name="select_time">Select Time</string>
+    <string name="select_date">Select Date</string>
 </resources>
