--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -2,9 +2,7 @@
     <string name="app_name">AndroidTruForms</string>
     <string name="select_time">Select Time</string>
     <string name="select_date">Select Date</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="date_pick_label">Pick Date</string>
     <string name="add_photo_label">Add photo of %s</string>
+    <string name="title_activity_tru_navigation">TruNavigationActivity</string>
 </resources>
