--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="date_pick_label">Pick Date</string>
     <string name="add_photo_label">Add photo of %s</string>
     <string name="title_activity_tru_navigation">TruNavigationActivity</string>
+    <string name="page_no_of_pages">%s / %s</string>
 </resources>
