--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="add_photo_label">Add photo of %s</string>
     <string name="title_activity_tru_navigation">TruNavigationActivity</string>
     <string name="page_no_of_pages">%s / %s</string>
+    <string name="array_item_no_title">%s No %d .</string>
 </resources>
