--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="submit_btm_nav_text">Submit</string>
     <string name="pattern_validation_error">The input don\'t apply to the pattern %s</string>
     <string name="required_field">This field is required</string>
+    <string name="general_invalid_input">Invalid input</string>
 </resources>
