--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="pattern_validation_error">The input don\'t apply to the pattern %s</string>
     <string name="required_field">This field is required</string>
     <string name="general_invalid_input">Invalid input</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
