--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="select_time">Select Time</string>
     <string name="select_date">Select Date</string>
     <string name="date_pick_label">Pick Date</string>
-    <string name="add_photo_label">Add photo of %s</string>
+    <!--<string name="add_photo_label">Add photo of %s</string>-->
+    <string name="add_photo_label">Add photo</string>
     <string name="title_activity_tru_navigation">TruNavigationActivity</string>
     <string name="page_no_of_pages">%s/%s</string>
     <string name="array_item_no_title">%s No %d .</string>
