--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="initial_page_number">0/0</string>
     <string name="submit_btm_nav_text">Submit</string>
     <string name="pattern_validation_error">The input don\'t apply to the pattern %s</string>
+    <string name="in_valid_email">Invalid email format</string>
     <string name="required_field">This field is required</string>
     <string name="general_invalid_input">Invalid input</string>
 
