--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -24,5 +24,7 @@
     <string name="ok">OK</string>
     <string name="remove">Remove</string>
     <string name="add_more">Add More</string>
+    <string name="gallery">Gallery</string>
+    <string name="camera">Camera</string>
 
 </resources>
