set french language

--- a/android-tru-forms/src/main/res/values-fr/strings.xml
+++ b/android-tru-forms/src/main/res/values-fr/strings.xml
@@ -1,30 +1,30 @@
 <resources>
     <string name="app_name">AndroidTruForms</string>
-    <string name="select_time">Select Time</string>
-    <string name="select_date">Select Date</string>
-    <string name="date_pick_label">Pick Date</string>
+    <string name="select_time">Sélectionner une Time</string>
+    <string name="select_date">Sélectionner une Date</string>
+    <string name="date_pick_label">Choisir Date</string>
     <!--<string name="add_photo_label">Add photo of %s</string>-->
-    <string name="add_photo_label">Add photo</string>
-    <string name="title_activity_tru_navigation">TruNavigationActivity</string>
+    <string name="add_photo_label">Ajouter une photo</string>
+    <string name="title_activity_tru_navigation">Activité de TruNavigation</string>
     <string name="page_no_of_pages">%s/%s</string>
-    <string name="array_item_no_title">%s No %d .</string>
-    <string name="next_step_btm_nav_text">Next Step</string>
+    <string name="array_item_no_title">%s Non %d .</string>
+    <string name="next_step_btm_nav_text">L"'"étape Suivante</string>
     <string name="initial_page_number">0/0</string>
-    <string name="submit_btm_nav_text">Submit</string>
-    <string name="pattern_validation_error">The input don\'t apply to the pattern %s</string>
-    <string name="in_valid_email">Invalid email format</string>
-    <string name="required_field">This field is required</string>
-    <string name="general_invalid_input">Invalid input</string>
-    <string name="loading">Loading&#8230;</string>
-    <string name="cant_load_data">Can\'t Load your data</string>
-    <string name="please_correct_errors">Please correct the errors</string>
-    <string name="submitted">Submitted</string>
-    <string name="unable_to_create_form">Unable to create the form &#8230; please check the schema</string>
-    <string name="non_selected">Non Selected</string>
-    <string name="ok">OK</string>
-    <string name="remove">Remove</string>
-    <string name="add_more">Add More</string>
-    <string name="gallery">Gallery</string>
-    <string name="camera">Camera</string>
+    <string name="submit_btm_nav_text">Soumettre</string>
+    <string name="pattern_validation_error">L"'"entrée ne s"'"applique pas au modèle %s</string>
+    <string name="in_valid_email">Format d"'"email invalide</string>
+    <string name="required_field">Ce champ est requis</string>
+    <string name="general_invalid_input">Entrée invalide</string>
+    <string name="loading">Chargement&#8230;</string>
+    <string name="cant_load_data">Impossible de charger vos données</string>
+    <string name="please_correct_errors">Veuillez corriger les erreurs</string>
+    <string name="submitted">Soumis</string>
+    <string name="unable_to_create_form">Impossible de créer le formulaire &#8230; please check the schema</string>
+    <string name="non_selected">Non sélectionné</string>
+    <string name="ok">D"'"Accord</string>
+    <string name="remove">éliminer</string>
+    <string name="add_more">Ajouter Plus</string>
+    <string name="gallery">Galerie</string>
+    <string name="camera">Caméra</string>
 
 </resources>
