Translate truforms views and handle json schema to dispaly views with the mobile app language

--- a/android-tru-forms/src/main/res/values-fr/strings.xml
+++ b/android-tru-forms/src/main/res/values-fr/strings.xml
@@ -26,5 +26,7 @@
     <string name="add_more">Ajouter Plus</string>
     <string name="gallery">Galerie</string>
     <string name="camera">Caméra</string>
+    <string name="submit">Soumettre</string>
+
 
 </resources>
