--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="add_more">Add More</string>
     <string name="gallery">Gallery</string>
     <string name="camera">Camera</string>
+    <string name="submit">Submit</string>
 
 </resources>
