--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="in_valid_email">Invalid email format</string>
     <string name="required_field">This field is required</string>
     <string name="general_invalid_input">Invalid input</string>
+    <string name="enter_valid_email">Please enter a valid email</string>
     <string name="loading">Loading&#8230;</string>
     <string name="cant_load_data">Can\'t Load your data</string>
     <string name="please_correct_errors">Please correct the errors</string>
