--- a/android-tru-forms/src/main/res/values/strings.xml
+++ b/android-tru-forms/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="submit">Submit</string>
     <string name="pdf_document">pdf</string>
     <string name="close">Close</string>
+    <string name="available_formats">Available formats: pdf, jpg, png</string>
 
 </resources>
